--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</div>
    		<script src="js/jquery-3.2.1.min.js"></script>
     	<script src="js/jquery-3.2.1.js"></script>
+    	<script src="js/galerie.js"></script>
     	<script src="js/main.js"></script>
 	</body>
 </html>
