--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 	<body>
 		<div class="galery-body">
-			<div class="inner">
+			<div class="box">
+
+			</div>
+			<div class="box">
 				
 			</div>
 		</div>
